2008-12-08  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp.c: Fixed compilation when DPD support is disabled.

2008-12-08  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/{pfkey.c|privsep.c|privsep.h}: do not cache pfkey
	  sockets for SA dumps: it might cause some notifications to
	  not be handled when select() has triggered pfkey, but timer
	  event calls pfkey_dump_sadb() before reading pfkey socket

2008-12-05  Timo Teras  <timo.teras@iki.fi>
	From Arnaud Ebalard <arno@natisbad.org>:
	* src/libipsec/{key_debug.c|libpfkey.h|pfkey.c}: library functions
	  for SADB_X_EXT_KMADDRESS and updated SADB_X_MIGRATE support
	* src/racoon/{handler.c|handler.h|ipsec_doi.c|isakmp.c|
	  isakmp_quick.c|pfkey.c|policy.c|policy.h}: support Mobile IPv6
	  per draft-ebalard-mext-pfkey-enhanced-migrate (minor fixes to
	  the patch by me)

2008-12-04  Christoph Badura  <bad@netbsd.org>
	* src/racoon/privsep.c: use SIG_IGN to ignore SIGPIPE as I intended
	to.

2008-12-02  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/session.c: Default action for SIGPIPE in Linux is
	  terminate; explicitly ignore it.

2008-11-27  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp_cfg.c: Fixed pool resizing.
	* src/racoon/main.c: Set up a default value for Mode Config Pool
	  size if pool address specified but pool size not specified.

2008-11-27  Timo Teras  <timo.teras@iki.fi>
	From Matthew Krenzer <krenzer@wayport.net>:
	* libipsec/{libpfkey.h|pfkey.c}, racoon/{cfparse.y,cftoken.l,
	  localconf.c,localconf.h,pfkey.c,racoon.conf.5}: ability to set
	  pfkey buffer size via a configuration directive (indentation and
	  other minor fixes by Timo)
	From Arnaud Ebalard <arno@natisbad.org>:
	* src/racoon/pfkey.c: remove the unused MAXNESTEDSA

2008-11-25  Christoph Badura  <bad@netbsd.org>
	* src/racoon/isakmp.c:
	  Keep myaddr.sock at -1 when no socket is opened.
	  Fix error handling when setting IPV6_USE_MIN_MTU socket option.
	* src/racoon/grabmyaddr.c: